--- a/readme
+++ b/readme
@@ -1,5 +1,7 @@
 This project demonstrates you the concept of react context api.
-I have learned this concept from youtube channel - roadsidecoder.
+I have learned this concept from youtube.
+
+Have implemented this project using react and react-bootstrap
 
 Link for this Shopping cart App -
 https://neerajrajak.github.io/react-contect-api-shopping-cart/
